--- a/style/main.css
+++ b/style/main.css
@@ -151,7 +151,8 @@ body {
 }
 
 .six .hat  {
-  left: 41.5%;
+  /* left: 41.5%; */
+  left: 50%;
   position: absolute;
   /* transform: scale(0.1); */
   top: -35%;
